update to PAS